--- a/Weather/Weather.html
+++ b/Weather/Weather.html
@@ -6,7 +6,14 @@
 </head>
 <body>
     <h1>Weather App</h1>
-    <p>To search, enter a US Zipcode, UK Postcode, Canada Postalcode, IP address, Latitude/Longitude (decimal degree) or city name</p>
+    <p>To search, enter a US Zipcode, UK Postcode, Canada Postalcode, IP address, Latitude and Longitude (decimal degree), or city name</p>
+    <p>Example: "New York", or "London"</p>
+    <div id="checkbox-container">
+        <p>Check off any boxes if you'd like more information</p>
+        <label><input type="checkbox" id="checkbox1"> Wind & Gust Stats</label>
+        <label><input type="checkbox" id="checkbox2"> Air Quality</label>
+        
+    </div>
     <input type="text" id="location-input" placeholder="Enter location">
     <button id="add-button">Search</button>
     
