Added visibility to Weather.html

--- a/Weather/Weather.html
+++ b/Weather/Weather.html
@@ -12,7 +12,7 @@
         <p>Check off any boxes if you'd like more information</p>
         <label><input type="checkbox" id="checkbox1"> Wind & Gust Stats</label>
         <label><input type="checkbox" id="checkbox2"> Air Quality</label>
-        
+        <label><input type="checkbox" id="checkbox3"> Visibility</label>
     </div>
     <input type="text" id="location-input" placeholder="Enter location">
     <button id="add-button">Search</button>
